# esp-mesh-lite-examples

./: README.md
mesh2ble/: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig.defaults
mesh2ble/main/: Kconfig.projbuild  main.c  nimble_spp_server.c
mesh2can/: README.md
mesh2can/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  twai.c
mesh2uart/: README.md  sdkconfig.defaults
mesh2uart/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  tusb.c  uart.c
mesh_ftp-client/: CMakeLists.txt  README.md
mesh_ftp-client/main/: ftp_client.c  idf_component.yml  main.c
mesh_ftp_client/: README.md  sdkconfig.defaults
mesh_ftp_client/main/: CMakeLists.txt  Kconfig.projbuild  ftp_client.c  main.c
mesh_http_client/: README.md  http-server.py  sdkconfig.defaults
mesh_http_client/flask/: main.py
mesh_http_client/main/: CMakeLists.txt  Kconfig.projbuild  http_client.c  main.c
mesh_http_server/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
mesh_local_control/: README.md
mesh_mqtt_client/: README.md  sdkconfig.defaults
mesh_remote_logging/: README.md  sdkconfig.defaults  tcp-server-threading.py  udp-server.py
mesh_sntp_client/: README.md
mesh_websocket_client/: README.md  ws-server.py
mesh_websocket_server/: README.md  sdkconfig.defaults
mesh_websocket_server/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  json_server.c  main.c  node_manager.c  web_client.c
no_router_message_exchange/: README.md
router_less_message_exchange/: README.md  sdkconfig.defaults
(+29 files in other folders)
